<resources>
    <string name="app_name">Phonebook</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="first_last_name">%s %s</string>
    <string name="email">Email</string>
    <string name="number">Telephone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country_code">(Code)</string>

    <string name="select_country">Select country</string>
    <string name="country_not_selected">Country</string>
    <string name="choose_country">Choose country</string>
    <string name="enter_country">Enter country name</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="apply_filters">Apply filters</string>
    <string name="search">Search</string>

    <string name="empty_fields">Please fill all fields!</string>
    <string name="invalid_email">Please enter valid email address!</string>
    <string name="invalid_phone">Please enter valid phone number!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_contact">Create Contact</string>
    <string name="contact_details">Contact Details</string>
    <string name="phone_book">Phonebook</string>
    <string name="successfully_saved">Contact was successfully saved!</string>
    <string name="successfully_deleted">Contact was successfully deleted!</string>
    <string name="delete_contact_title">Delete this contact</string>
    <string name="delete_contact_content">Do you want to delete this contact?</string>
    <string name="save_contact_title">Save this contact</string>
    <string name="save_contact_content">Do you really want to save this contact?</string>

</resources>
