<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dany.phonebook.views.CreateContactActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/background_gradient">
            <ImageView
                android:id="@+id/image_view_edit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/edit"
                android:scaleType="centerInside"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_edit"
                android:text="@string/create_contact"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:fontFamily="cursive"
                android:gravity="center"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="30dp">
            <EditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:textColor="@color/blue"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:drawableStart="@drawable/contact_icon"
                android:drawablePadding="10dp"/>
            <EditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/blue"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:drawableStart="@drawable/contact_icon"
                android:drawablePadding="10dp"/>
            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/blue"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/text_view_country"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/country_not_selected"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:drawableStart="@drawable/pin_icon"
                    android:drawablePadding="10dp"/>
                <Button
                    android:id="@+id/button_select_country"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_rectangle_with_border"
                    android:drawableEnd="@drawable/blue_arrow_icon"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/choose_country"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_view_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_code"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="10dp"/>
                <EditText
                    android:id="@+id/edit_text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:hint="@string/number"
                    android:gravity="center"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:singleLine="true"/>
            </LinearLayout>
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingEnd="30dp">
                <RadioButton
                    android:id="@+id/radio_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="true"
                    android:buttonTint="@color/blue"
                    android:layout_weight="2"
                    android:textSize="14sp"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/radio_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:checked="false"
                    android:buttonTint="@color/blue"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/female"/>
            </RadioGroup>
            <Button
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:background="@drawable/solid_rounded_rectangle"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
