<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dany.phonebook.views.ApplyFilterFragment"
    android:clickable="true"
    android:focusable="true">
    <View
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray_background"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerVertical="true"
        android:background="@drawable/white_rounded_rectangle">
        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/apply_filters"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:fontFamily="cursive"
            android:gravity="center"
            android:background="@drawable/rectangle_rounded_top_corners"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/text_view_title">
            <RadioButton
                android:id="@+id/radio_m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:text="@string/male"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:buttonTint="@color/blue"/>
            <RadioButton
                android:id="@+id/radio_f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:checked="false"
                android:buttonTint="@color/blue"/>
        </RadioGroup>
        <TextView
            android:id="@+id/text_view_country"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/radio_group"
            android:text="@string/country_not_selected"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:drawableStart="@drawable/pin_icon"
            android:drawablePadding="10dp"/>
        <Button
            android:id="@+id/button_select_country"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/radio_group"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/choose_country"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:background="@drawable/rounded_rectangle_with_border"
            android:drawableEnd="@drawable/blue_arrow_icon"/>
        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:fontFamily="cursive"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/search_icon"
            android:background="@drawable/solid_rounded_rectangle" />
    </RelativeLayout>
</RelativeLayout>
