<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dany.phonebook.views.ContactDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/background_gradient">
            <TextView
                android:id="@+id/text_view_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/contact_details"
                android:textSize="40sp"
                android:textColor="@android:color/white"
                android:fontFamily="cursive"
                android:gravity="center"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/text_view_header"
                android:layout_centerHorizontal="true"
                android:src="@drawable/details"
                android:scaleType="centerInside" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/contact_icon"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/text_view_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/pin_icon"
                android:drawablePadding="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_view_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="10dp"/>
                <TextView
                    android:id="@+id/text_view_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    android:gravity="start|center_vertical"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_view_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/gender_icon"
                android:drawablePadding="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/edit"
                    android:textColor="@color/blue"
                    android:gravity="center|center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/rounded_rectangle_with_border"
                    android:drawableStart="@drawable/edit_icon"
                    android:drawableEnd="@drawable/blue_arrow_icon"
                    android:drawablePadding="10dp"/>
                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/delete"
                    android:textColor="@color/blue"
                    android:gravity="center|center_vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/rounded_rectangle_with_border"
                    android:drawableStart="@drawable/delete_icon"
                    android:drawableEnd="@drawable/blue_arrow_icon"
                    android:drawablePadding="10dp"/>
             </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
